# laughing-octo-enigma

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs  routes.rs  state.rs
backend/src/controllers/: routes.rs
backend/src/models/: posts.rs
backend/src/models/user/: user_contracts.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs
frontend/src/components/large/: navbar.rs
frontend/src/components/medium/: accountform.rs  login.rs  web3.rs
frontend/src/components/small/: mod.rs
frontend/src/routes/: router.rs  search.rs
frontend/src/services/: mod.rs
frontend/src/views/: mod.rs
frontend/src/views/pages/: home.rs  login.rs  mod.rs
node_services/: index.mjs  package-lock.json  package.json
node_services/ipfs/: config
node_services/ipfs/blocks/35/: CIQPCLLRLFASKRADX4CZFJ4JIWAWFVHOISMMQLBTREDPK6RRP43335I.data
node_services/ipfs/blocks/53/: CIQLC66DOWUXHZ3TPHZPUY4TAD5TK2E5LJTHDOW3JVJQMQAYY4VI53Y.data
node_services/ipfs/blocks/A6/: CIQJZIWZRWFOUWY4JZHG54TVGT7FOOH6SZWFHWOIP4J6VK2B7T5XA6Q.data
node_services/ipfs/blocks/FH/: CIQAOPRF4SVXSANYU4MU7KTPKTJQHL6VE2FV3GK3RND5JEJXLNOHFHI.data
node_services/ipfs/blocks/KB/: CIQIZGBNAGDVYU573YKG34BPF3VCJ2LF25ZCDRHMBNIBE6SZZLRCKBQ.data
node_services/ipfs/blocks/LC/: CIQFDBSVOORL3V3YKUKV7M7NY6DDX3ANHR453KP2DWJSFEQGWRXPLCA.data
node_services/ipfs/datastore/: 000026.ldb  000028.ldb  000031.ldb  LOG  LOG.old  MANIFEST-000030
node_services/ipfs/pins/: LOG  LOG.old
node_services/orbitdb/src/: schema.js
(+17 files in other folders)
