[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
#orchard = "0.4.0"
serde_json = "1.0.95"
tokio = { version = "1.28.0", features = ["full"] }
uuid = "1.3.1"
#zcash_primitives = "0.10.2"