[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","rlib"]
[dependencies]
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["serde_derive"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew-ethereum-provider = { git = "https://github.com/monomadic/yew-ethereum-provider" }
anyhow = { version = "1.0.70", features = ["backtrace"] }
yew-hooks = "0.2.0"
gloo-utils = "0.1.6"
yew-utils = "0.3.0"
gloo = "0.8.0"
yew_form = "0.1.7"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
serde_json = "1.0.96"
[dependencies.web-sys]
version = "0.3.61"
features = [
    "MouseEvent", 
    "KeyboardEvent",
    "Event", 
    "DragEvent",
    "InputEvent"
      ]
